--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						</ul>
 					</div><!--/social-container-->
 					<div class="picture-container">
-						<img src="https://cdn.pixabay.com/photo/2016/02/22/18/57/puppy-1216269_960_720.jpg" class="portrait-pic">
+						<img class="portrait-pic" src="./assets/ProfilePic.jpg">
 					</div><!--/picture-container-->
 				</div><!--/profile-container-->
 			</header><!--/header-->
