--- a/index.html
+++ b/index.html
@@ -3,21 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Resume Template</title>
-  
-  
-  
-      <link rel="stylesheet" href="css/style.css">
+  	<link rel="stylesheet" href="css/style.css">
 
   
 </head>
 
 <body>
   <html>
-	
 	<head>
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	</head>
-	
 	<body>
 		<div class="wrapper">
 			<header>
