Fixed jQuery scrolling
Replaced href="#" with href="#/" to stop the link from scrolling to the top.

--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
 				<div class="line-break"></div><!--/line-break-->
 				<section class="portfolio-container">
 					<div id="menu-picker">
-						<a href="#" data-id="1" class="menu-text">Data Scientist</a>
-						<a href="#" data-id="2" class="menu-text">Academic</a>
-						<a href="#" data-id="3" class="menu-text">Developer</a>
+						<a href="#/" data-id="1" class="menu-text">Data Scientist</a>
+						<a href="#/" data-id="2" class="menu-text">Academic</a>
+						<a href="#/" data-id="3" class="menu-text">Developer</a>
 					</div><!--/menu-picker-->
 					<div id="pages">
 						<div class="mydivshow portfolio1">
