--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		<div class="wrapper">
 			<header>
 				<div class="name-container">
-					<h1>My Name</h1>
-					<h4>Small summary of current position</h4>
+					<h1>Koen Neijenhuijs</h1>
+					<h4>PhD Student</h4>
 				</div><!--/name-container-->
 				<div class="profile-container">
 					<div class="social-container">
@@ -46,13 +46,17 @@
 					<div class="item">
                     <div class="meta-info">
                         <div class="upper-row">
-                            <h3 class="job-title">Job 1</h3>
+                            <h3 class="job-title">PhD Student</h3>
                             <div class="time">2015 - Present</div><!--/time-->
                         </div><!--/upper-row-->
-                        <div class="company">Employer, City</div><!--/company-->
+                        <div class="company">VU University, Amsterdam</div><!--/company-->
                     </div><!--/meta-info-->
                     <div class="details">
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo.</p>  
+                        <p>As a PhD student at the department of Clinical Psychology at VU University Amsterdam, I am investigating Patient Reported Outcome Measures used in psychosocial oncology. Currently I am investigating the psychometric properties of 39 PROMs through a systematic review, and validating the Dutch version of the eHealth Impact Questionnaire.</p>
+
+                        <p>In the future of my personal PhD project, I intend to use data mining and machine learning techniques to delve into the big database of PROM responses collected by Oncokompas 2.0.</p>
+
+                        <p>Due to my focus and expertise on data-analysis, I am providing statistical support to both internal projects as well as to various research projects of War Child.</p>
                     </div><!--/details-->
 					</div><!--/item-->
 					<div class="item">
