Added Work Experience and Education

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <div class="meta-info">
                         <div class="upper-row">
                             <h3 class="job-title">PhD Student</h3>
-                            <div class="time">2015 - Present</div><!--/time-->
+                            <div class="time">Aug 2015 - Present</div><!--/time-->
                         </div><!--/upper-row-->
                         <div class="company">VU University, Amsterdam</div><!--/company-->
                     </div><!--/meta-info-->
@@ -62,13 +62,25 @@
 					<div class="item">
                     <div class="meta-info">
                         <div class="upper-row">
-                            <h3 class="job-title">Job 2</h3>
-                            <div class="time">2014 - 2015</div><!--/time-->
+                            <h3 class="job-title">Statistical Consultant</h3>
+                            <div class="time">Mar 2014 - Jul 2015</div><!--/time-->
                         </div><!--/upper-row-->
-                        <div class="company">Employer, City</div><!--/company-->
+                        <div class="company">Radboud University, Nijmegen</div><!--/company-->
                     </div><!--/meta-info-->
                     <div class="details">
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo.</p>  
+                        <p>I provided statistical and methodological support to Bachelor and Master students.</p>  
+                    </div><!--/details-->
+					</div><!--/item-->
+					<div class="item">
+                    <div class="meta-info">
+                        <div class="upper-row">
+                            <h3 class="job-title">Teaching Assistant (Bachelor Psychology)</h3>
+                            <div class="time">Sep 2012 - Jul 2015</div><!--/time-->
+                        </div><!--/upper-row-->
+                        <div class="company">Radboud University, Nijmegen</div><!--/company-->
+                    </div><!--/meta-info-->
+                    <div class="details">
+                        <p>I taught practical classes for the university-level Bachelor courses (i.e. Methods of Research (B1), Statistics 2 (B2), Psychometric and Decision Analysis (B2), and Data-analysis (B2).</p>  
                     </div><!--/details-->
 					</div><!--/item-->
 				</section><!--/experience-box-->
@@ -78,25 +90,49 @@
 					<div class="item">
                     <div class="meta-info">
                         <div class="upper-row">
-                            <h3 class="job-title">Master's Degree</h3>
+                            <h3 class="job-title">Master's Degree (Research), <br>Research: Behavioural Science, Cum Laude</h3>
                             <div class="time">2013 - 2015</div><!--/time-->
                         </div><!--/upper-row-->
-                        <div class="company">University, City</div><!--/company-->
+                        <div class="company">Radboud University, Nijmegen</div><!--/company-->
                     </div><!--/meta-info-->
                     <div class="details">
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo.</p>  
+                        <p>I completed my Research Master program Cum Laude. The program focussed on the use of the scientific method in Behaviour Science. My last year I specialized in Decision-Making research, in particular Risky Decision-Making in Adolescents. My masterthesis is available on <b>link here</b>.</p>  
                     </div><!--/details-->
 					</div><!--/item-->
 					<div class="item">
                     <div class="meta-info">
                         <div class="upper-row">
-                            <h3 class="job-title">Bachelor's Degree</h3>
-                            <div class="time">2008 - 2013</div><!--/time-->
+                            <h3 class="job-title">Honours Academy Degree, <br>Beyond the Frontiers</h3>
+                            <div class="time">2014 - 2015</div><!--/time-->
                         </div><!--/upper-row-->
-                        <div class="company">University, City</div><!--/company-->
+                        <div class="company">Radboud University, Nijmegen</div><!--/company-->
                     </div><!--/meta-info-->
                     <div class="details">
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo.</p>  
+                        <p>In my second year of my Research Master, I travelled to Glasgow University to visir dr. Dale Barr. In Glasgow I worked on learning the intricacies of writing R packages, writing simulation studies, and the mathematics behind Mixed-Effect Models.</p>  
+                    </div><!--/details-->
+					</div><!--/item-->
+					<div class="item">
+                    <div class="meta-info">
+                        <div class="upper-row">
+                            <h3 class="job-title">Honours Academy Degree, <br>Wider Implications of Neuroscience</h3>
+                            <div class="time">2013 - 2014</div><!--/time-->
+                        </div><!--/upper-row-->
+                        <div class="company">Radboud University, Nijmegen</div><!--/company-->
+                    </div><!--/meta-info-->
+                    <div class="details">
+                        <p>In my first year of my Research Master, I collaberated with 7 other Master Students from differing disciplines. Tasked by the Health Council of the Netherlands, we delved into the specifics of the 'Wider Implications of Deep Brain Stimulation'. The end result was a report and publication in <i>Neuroethics</i>.</p>  
+                    </div><!--/details-->
+					</div><!--/item-->
+					<div class="item">
+                    <div class="meta-info">
+                        <div class="upper-row">
+                            <h3 class="job-title">Bachelor's Degree, <br>Psychology</h3>
+                            <div class="time">2008 - 2013</div><!--/time-->
+                        </div><!--/upper-row-->
+                        <div class="company">Radboud University, Nijmegen</div><!--/company-->
+                    </div><!--/meta-info-->
+                    <div class="details">
+                        <p>I completed my Bachelor's Degree in Psychology. The Bachelor program focussed on both the scientific discipline in Psychology, as its application in practice.</p>  
                     </div><!--/details-->
 					</div><!--/item-->
 				</section><!--/education-box-->
