Fixed Skill layout in Data Scientist
Width of list items is now equal among text, stars, and mastery in Data Scientist

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <div class="company">Radboud University, Nijmegen</div><!--/company-->
                     </div><!--/meta-info-->
                     <div class="details">
-                        <p>I completed my Research Master program Cum Laude. The program focussed on the use of the scientific method in Behaviour Science. My last year I specialized in Decision-Making research, in particular Risky Decision-Making in Adolescents. My masterthesis is available on <b>link here</b>.</p>  
+                        <p>I completed my Research Master program Cum Laude. The program focused on the use of the scientific method in Behaviour Science. My last year I specialized in Decision-Making research, in particular Risky Decision-Making in Adolescents. My masterthesis is available on <b>link here</b>.</p>  
                     </div><!--/details-->
 					</div><!--/item-->
 					<div class="item">
@@ -132,7 +132,7 @@
                         <div class="company">Radboud University, Nijmegen</div><!--/company-->
                     </div><!--/meta-info-->
                     <div class="details">
-                        <p>I completed my Bachelor's Degree in Psychology. The Bachelor program focussed on both the scientific discipline in Psychology, as its application in practice.</p>  
+                        <p>I completed my Bachelor's Degree in Psychology. The Bachelor program focused on both the scientific discipline in Psychology, as its application in practice.</p>  
                     </div><!--/details-->
 					</div><!--/item-->
 				</section><!--/education-box-->
@@ -154,8 +154,10 @@
 							<div class="skills-container">
 								<h2 class="portfolio-title">Skills</h2>
 								<ul class="skills">
-									<li class="skill">Skill 1<i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i>Coolio</li>
-									<li class="skill">Skill 2<i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i>Coolio</li>
+									<li class="skill"><div class="text">R</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></div><div class="mastery">Fluent</div></li>
+									<li class="skill"><div class="text">Analysis of Variance</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></div><div class="mastery">Fluent</div></li>
+									<li class="skill"><div class="text">Regression</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></div><div class="mastery">Fluent</div></li>
+									<li class="skill"><div class="text">Multilevel Analysis</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i></div><div class="mastery">Master</div></li>
 								</ul><!--/skills-->
 							</div><!--/skills-container-->
 						</div><!--/portfolio-div1-->
