Footer & Portfolio margin
Added simply copyright footer, and fixed the summary text margin in the portfolio section.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			</header><!--/header-->
 			<main>
 				<section class="summ-box">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tria genera bonorum; Nec vero alia sunt quaerenda contra Carneadeam illam sententiam. Quae quidem vel cum periculo est quaerenda vobis; Beatum, inquit. Duo Reges: constructio interrete.</p>
+					<p class="summary-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tria genera bonorum; Nec vero alia sunt quaerenda contra Carneadeam illam sententiam. Quae quidem vel cum periculo est quaerenda vobis; Beatum, inquit. Duo Reges: constructio interrete.</p>
 					<div class="line-break"></div><!--/line-break-->
 				</section><!--/summ-box-->
 				<section class="experience-box">
@@ -93,7 +93,7 @@
 					</div><!--/menu-picker-->
 					<div id="pages">
 						<div class="mydivshow portfolio1">
-							<p>1. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo.</p>
+							<p class="portfolio-text">1. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo.</p>
 							<div class="showcase-container">
 								<h2 class="portfolio-title">Portfolio</h2>
 													
@@ -112,7 +112,7 @@
 							</div><!--/skills-container-->
 						</div><!--/portfolio-div1-->
 						<div class="mydivhide portfolio2">
-							<p>2. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo.</p>
+							<p class="portfolio-text">2. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo.</p>
 							<div class="showcase-container">
 								<h2 class="portfolio-title">Publications</h2>
 								<p class="reference">Author, A. My publication is superrad. <em>Journal of Awesome, 1(1)</em>, 1-10.</p>
@@ -129,7 +129,7 @@
 							</div><!--/skills-container-->
 						</div><!--/portfolio-div2-->
 						<div class="mydivhide portfolio3">
-							<p>3. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo.</p>
+							<p class="portfolio-text">3. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo.</p>
 							<div class="showcase-container">
 								<h2 class="portfolio-title">Portfolio</h2>
 							</div><!--/showcase-container-->
@@ -219,6 +219,9 @@
 				</section><!--/misc-container-->
 			</main><!--/main-->
 		</div><!--/wrapper-->
+		<footer>
+			<p class="copyright">&copy Koen Neijenhuijs, 2017</p>
+		</footer><!--/footer-->
 	</body>	
 </html>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
