Added contentand fixed some margins
Added all content except for summary. Fixed the Miscellaneous skill margins.

--- a/index.html
+++ b/index.html
@@ -93,11 +93,9 @@
 					</div><!--/menu-picker-->
 					<div id="pages">
 						<div class="mydivshow portfolio1">
-							<p class="portfolio-text">1. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo.</p>
+							<p class="portfolio-text">Analyzing data is my pride and joy. Nothing (perhaps apart from some hobbies) is more fun than finding the right analysis for the right data set to answer a research question. I am a large proponent of using correct analytical methods. As such, when I find an analysis that is best suited for a question I want answered and I do not yet master that analysis, I will always take the time to get acquainted with the better analysis. This way, I have collected quite some proficiencies in a range of analytical methods. I try to advocate proper methodology and data-analysis by being available to colleagues to discuss and advice on these matters.</p>
 							<div class="showcase-container">
 								<h2 class="portfolio-title">Portfolio</h2>
-													
-    							
 							</div><!--/showcase-container-->
 							<div class="skills-container">
 								<h2 class="portfolio-title">Skills</h2>
@@ -105,31 +103,49 @@
 									<li class="skill"><div class="text">R</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></div><div class="mastery">Fluent</div></li>
 									<li class="skill"><div class="text">Analysis of Variance</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></div><div class="mastery">Fluent</div></li>
 									<li class="skill"><div class="text">Regression</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></div><div class="mastery">Fluent</div></li>
-									<li class="skill"><div class="text">Multilevel Analysis</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i></div><div class="mastery">Master</div></li>
+									<li class="skill"><div class="text">Psychometric Analysis</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></div><div class="mastery">Fluent</div></li>
+									<li class="skill"><div class="text">Mixed-effect Models</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i></div><div class="mastery">Master</div></li>
+									<li class="skill"><div class="text">Bayesian Statistics</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i></div><div class="mastery">Intermediate</div></li>
 									<li class="skill"><div class="text">Python</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i></div><div class="mastery">Intermediate</div></li>
 									<li class="skill"><div class="text">MySQL</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i></div><div class="mastery">Intermediate</div></li>
 								</ul><!--/skills-->
 							</div><!--/skills-container-->
 						</div><!--/portfolio-div1-->
 						<div class="mydivhide portfolio2">
-							<p class="portfolio-text">2. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo.</p>
+							<p class="portfolio-text">My academic career started during my <em>Research Master: Behavioural Science</em> where I specialized in Behavioural Science and advanced data-analysis. I specialized in one further topic within Behaviour Science: Behavioura Risky Decision-Making. Currently, as a PhD student I am focusing on measurement properties of Patient Reported Outcome Measures for cancer patients. I am also looking to delve into the opportunities of using Machine Learning and Data Mining to delve into large datasets of Patient Reported Outcome Measures.</p>
 							<div class="showcase-container">
 								<h2 class="portfolio-title">Publications</h2>
-								<p class="reference">Author, A. My publication is superrad. <em>Journal of Awesome, 1(1)</em>, 1-10.</p>
+								<p class="reference">Anderson, C. J., Bahník, Š., Barnett-Cowan, M., Bosco, F. A., Chandler, J., Chartier, C. R., ... & Della Penna, N. (2016). Response to comment on “estimating the reproducibility of psychological science”. <em>Science, 351(6277)</em>, 1037-1037. <a href="10.1126/science.aad9163" target="_blank">doi:10.1126/science.aad9163</a></p>
+								<p class="reference">Open Science Collaboration. (2015). Estimating the reproducibility of psychological science. <em>Science, 349</em>. <a href="10.1126/science.aac4716" target="_blank">doi:10.1126/science.aac4716</a></p>
+								<p class="reference">Sommers, R. P., Dings, R., Neijenhuijs, K. I., Andringa, H., Arts, S., van de Bult, D., ... & Haselager, P. F. (2015). A young scientists’ perspective on DBS: a plea for an international DBS organization. <em>Neuroethics, 8(2)</em>, 187-190. <a href="10.1007/s12152-015-9231-x" target="_blank">doi:10.1007/s12152-015-9231-x</a></p>
 							</div><!--/showcase-container-->
 							<div class="showcase-container">
-								<h2 class="portfolio-title">Grants</h2>
+							<h2 class="portfolio-title">Grants</h2>
+							<div class="meta-info">
+                        		<div class="upper-row">
+                           			<h3 class="grant-title">Grant Consumer eHealth</h3>
+                            		<div class="time">January 2017</div><!--/time-->
+                        		</div><!--/upper-row-->
+                        		<div class="grant-company">NFU Citrien</div><!--/company-->
+                    		</div><!--/meta-info-->
+                    		<div class="details">
+                        		<p class="portfolio-text">Grant awarded by the NFU funded by the Citrienfund, for translating and validating the eHealth Impact Question for the Dutch population of eHealth users (eHIQ-NL). For more information on this project, see <a href="https://www.nfu-ehealth.nl/projecten/alle-projecten/de-nederlandse-e-health-impact-questionnaire-ehiq/">here</a>.</p>  
+                    		</div><!--/details-->
 							</div><!--/showcase-container-->
 							<div class="skills-container">
 								<h2 class="portfolio-title">Areas of Expertise</h2>
 								<ul class="skills">
-									<li class="skill"><div class="text">Skill 1</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></div><div class="mastery">Fluent</div></li>
-									<li class="skill"><div class="text">Skill 2</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></div><div class="mastery">Fluent</div></li>
+									<li class="skill"><div class="text">Behavioural Science</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></div><div class="mastery">Master</div></li>
+									<li class="skill"><div class="text">Advanced Data-analysis</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></div><div class="mastery">Master</div></li>
+									<li class="skill"><div class="text">Risky Decision-making</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i></div><div class="mastery">Knowledgeable</div></li>
+									<li class="skill"><div class="text">Measurement Properties</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i></div><div class="mastery">Knowledgeable</div></li>
+									<li class="skill"><div class="text">Patient Reported Outcome Measures</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i></div><div class="mastery">Knowledgeable</div></li>
+									<li class="skill"><div class="text">Psycho-oncology</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i></div><div class="mastery">Intermediate</div></li>
 								</ul><!--/skills-->
 							</div><!--/skills-container-->
 						</div><!--/portfolio-div2-->
 						<div class="mydivhide portfolio3">
-							<p class="portfolio-text">3. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo.</p>
+							<p class="portfolio-text">Am I a developer? Not really, but I enjoy coding! I started coding in Python to set up behavioural experiments, as well as coding in R for data-analysis. While R isn't a traditional programming language, it is object-oriented as well. Because I enjoy this kind of coding, I delved back into HTML and CSS to build this website. I'm looking to keep creating small coding projects in my free time (which is very sparse as a PhD student).</p>
 							<div class="showcase-container">
 								<h2 class="portfolio-title">Portfolio</h2>
 							</div><!--/showcase-container-->
@@ -199,23 +215,22 @@
 				</section><!--/education-box-->
 				<div class="line-break"></div><!--/line-break-->
 				<section class="misc-container">
-					<h2 class="section-title">Miscellaneous</h2>
-					<div class="skills-wrapper">
-						<div class="skills-container">
-							<h2 class="portfolio-title">Hobbies</h2>
-							<ul class="skills">
-								<li class="skill">Hobby 1<i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i>Fluent</li>
-								<li class="skill">Hobby 2<i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i>Fluent</li>
-							</ul><!--/skills-->
-						</div><!--/skills-container-->
-						<div class="skills-container">
-							<h2 class="portfolio-title">Languages</h2>
-							<ul class="skills">
-								<li class="skill">Language 1<i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i>Fluent</li>
-								<li class="skill">Language 2<i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i>Fluent</li>
-							</ul><!--/skills-->
-						</div><!--/skills-container-->
-					</div><!--/skills-wrapper-->
+					<div class="skills-container">
+						<h2 class="portfolio-title">Hobbies</h2>
+						<ul class="skills">
+							<li class="skill"><div class="text">Video Games</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></div><div class="mastery">Beat FTL Once</div></li>
+							<li class="skill"><div class="text">Playing Drums</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i></div><div class="mastery">Wannabe Rockstar</div></li>
+							<li class="skill"><div class="text">Playing Guitar</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i></div><div class="mastery">Enthusiastic Amateur</div></li>
+							<li class="skill"><div class="text">Mixing and Mastering</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i></div><div class="mastery">Enthusiastic Amateur</div></li>
+						</ul><!--/skills-->
+					</div><!--/skills-container-->
+					<div class="skills-container">
+						<h2 class="portfolio-title">Languages</h2>
+						<ul class="skills">
+							<li class="skill"><div class="text">Dutch</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></div><div class="mastery">Native</div></li>
+							<li class="skill"><div class="text">English</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></div><div class="mastery">Fluent</div></li>
+						</ul><!--/skills-->
+					</div><!--/skills-container-->
 				</section><!--/misc-container-->
 			</main><!--/main-->
 		</div><!--/wrapper-->
